TransactionService and StockTransaction service added

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.5.2</version> <!-- Ensure this version is correct and compatible -->
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+
 	<groupId>com.in28minutes.maven</groupId>
 	<artifactId>junit-example</artifactId>
 	<version>1.0-SNAPSHOT</version>
@@ -13,6 +20,28 @@
 	<url>http://www.in28minutes.com</url>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -31,6 +60,16 @@
 			<version>RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Mockito dependency for unit tests -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>4.0.0</version>
+			<scope>test</scope>
+		</dependency>
+
+
 
 	</dependencies>
 
